create unit and move func Chomp

--- a/project2.lpi
+++ b/project2.lpi
@@ -30,11 +30,16 @@
         </UserOverrides>
       </environment>
     </RunParams>
-    <Units Count="1">
+    <Units Count="2">
       <Unit0>
         <Filename Value="project2.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
+      <Unit1>
+        <Filename Value="unit1.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="Unit1"/>
+      </Unit1>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
